Add UpdateMovie panel and movie updating functionality
This commit introduces the UpdateMovie panel for updating movie details in the GUI, including validation and integration with PeliculaDAO. It updates related classes, refactors methods for handling selected movies, and extends category options in PeliculaRedesign.